# CareerAutomationPlatform

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml
.github/: CODEOWNERS
.github/workflows/: ci.yml  deploy.yml
backend/: alembic.ini  pyproject.toml  requirements-shared.txt
backend/ai_orchestrator/: Dockerfile  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/application_service/: Dockerfile  requirements.txt
backend/auth_service/: Dockerfile  requirements.txt
backend/job_service/: Dockerfile  requirements.txt
backend/match_service/: Dockerfile  requirements.txt
backend/notification_service/: Dockerfile  requirements.txt
backend/outreach_service/: Dockerfile
backend/profile_service/: Dockerfile
backend/resume_service/: Dockerfile  requirements.txt
backend/scripts/: create_service.sh  migrate.sh  seed_data.py
backend/shared/: __init__.py  config.py  database.py  logging.py  pyproject.toml
backend/shared/middleware/: __init__.py  compression.py  metrics.py  rate_limit.py
backend/shared/schemas/: __init__.py  common.py  pagination.py
backend/shared/utils/: __init__.py  cache.py  datetime_utils.py  encryption.py
backend/tracking_service/: Dockerfile  requirements.txt
docker/loki/: loki-config.yml
docker/nginx/: nginx.conf
docs/: api-reference.md  architecture.md  edge-case.md  eval.md  implementation-plan.md  problemStatement.md  run-guide.md  setup.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
scripts/: seed_data.py
(+394 files in other folders)
