[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "career-platform-shared"
version = "0.1.0"
description = "Shared libraries for the Career Automation Platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "redis[hiredis]>=5.0",
    "structlog>=24.0",
    "httpx>=0.27",
    "cryptography>=41.0",
    "google-genai>=1.0",
    "openai>=1.0",
    "prometheus-client>=0.20.0",
]

[tool.setuptools.packages.find]
include = ["shared*"]
